--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,13 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:targetApi="q">
-        <activity android:name=".ui.DormStaffRegister"></activity>
+        <activity android:name=".ui.register.StaffRegister" />
         <activity
             android:name=".ui.UserGroupActivity"
             android:configChanges="uiMode" />
-        <activity android:name=".ui.StudentDashboard" />
+        <activity android:name=".ui.dashboard.Dashboard" />
         <activity
-            android:name=".ui.StudentRegister"
+            android:name=".ui.register.StudentRegister"
             android:configChanges="uiMode" />
         <activity
             android:name=".ui.Login"
