--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="student.app">
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name="androidx.multidex.MultiDexApplication"
         android:allowBackup="true"
@@ -16,7 +18,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:targetApi="q">
-        <receiver android:name=".util.NFCBroadcastReceiver"/>
+        <activity android:name=".ui.AdminDashBoard"></activity>
+        <activity android:name=".ui.StudentAttentActivity" />
+        <activity android:name=".ui.AgreementActivity" />
+
+        <receiver android:name=".util.NFCBroadcastReceiver" />
 
         <activity android:name=".ui.register.StaffRegister" />
         <activity
@@ -25,7 +31,7 @@
         <activity
             android:name=".ui.dashboard.Home"
             android:configChanges="uiMode"
-            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"/>
+            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar" />
         <activity
             android:name=".ui.register.StudentRegister"
             android:configChanges="uiMode" />
