--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:25.12.0')
     implementation 'com.google.firebase:firebase-analytics'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    implementation 'commons-io:commons-io:2.6'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
 }
